[package]
name = "qimen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.17.0"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
chrono = "0.4.23"

[[example]]
name = "qiju"
path = "examples/qiju.rs"
